# GraKelX

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yaml  test.yaml
doc/: api.rst  classes.rst  conf.py  datasets.rst  graph.rst  graph_kernel.rst  index.rst  kernels.rst
doc/documentation/: contributing.rst  core_concepts.rst  creating_kernels.rst  installation.rst  introduction.rst
doc/documentation/code_for_examples/: vertex_kernel.py  vertex_kernel_advanced.py
doc/kernels/: core_framework.rst  edge_histogram.rst  graph_hopper.rst  graphlet_sampling.rst  hadamard_code.rst  kernel.rst  lovasz_theta.rst  multiscale_laplacian.rst  neighborhood_hash.rst  neighborhood_subgraph_pairwise_distance.rst  odd_sth.rst  propagation.rst  pyramid_match.rst  random_walk.rst  shortest_path.rst  subgraph_matching.rst  svm_theta.rst  vertex_histogram.rst  weisfeiler_lehman.rst  weisfeiler_lehman_optimal_assignment.rst
doc/sphinxext/: github_link.py  sphinx_issues.py  xref.py
examples/: document_retrieval_example.py  erdos_renyi.py  node_attributed_dataset.py  nx_to_grakel.py  optimizing_hyperparameters.py  plot_pipeline_example.py  shortest_path.py  weisfeiler_lehman_subtree.py
grakelx/: __init__.py  graph.py  graph_kernels.py  tools.py
grakelx/datasets/: __init__.py  base.py  testing.py
grakelx/kernels/: __init__.py  core_framework.py  edge_histogram.py  graph_hopper.py  graphlet_sampling.py  hadamard_code.py  kernel.py  lovasz_theta.py  multiscale_laplacian.py  neighborhood_hash.py  neighborhood_subgraph_pairwise_distance.py  odd_sth.py  propagation.py  pyramid_match.py  random_walk.py  shortest_path.py  subgraph_matching.py  svm_theta.py  vertex_histogram.py  weisfeiler_lehman.py  weisfeiler_lehman_optimal_assignment.py
grakelx/kernels/_c_functions/: functions.pyx  header.pxd
grakelx/kernels/_isomorphism/: __init__.py  bliss.pyx
grakelx/utils/: __init__.py  _misc.py  _type_hints.py  converts.py
misc/: install_pynauty.py
tests/: test_Kernel.py  test_common.py  test_graph.py  test_graph_kernels.py  test_kernels.py  test_utils.py  test_windows_sdp_issue.py
tutorials/digit_classification/: digit_classification.ipynb
tutorials/text_categorization/: text_categorization.ipynb
